--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,30 +1,9 @@
-<main class="mainLogin">
-  <div class="formBox">
-    <form class="formLogin" id="formLogin">
-      <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input
-          type="email"
-          class="form-control"
-          id="exampleInputEmail1"
-          aria-describedby="emailHelp"
-          placeholder="Enter email"
-        />
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          id="exampleInputPassword1"
-          placeholder="Password"
-        />
-      </div>
-      <button type="submit" class="btn btn-primary btnLogin">Submit</button>
-      <p>¿Not registred?
-        <a href="http://localhost:8090/register">Register here!</a></p>
-    </form>
-    <img src="/image.jpg" alt="" class="imgLogin" />
-  </div>
-</main>
-<script src="/scripts/login.js"></script>
+<h1>LOGIN</h1>
+<form action='/api/users/login' method='post'>
+  Email: <input type='email' name='email' id='email' />
+  Password: <input type='password' name='password' id='password' />
+  <input type='submit' value='INGRESAR' />
+</form>
+
+<h2>USUARIO NUEVO?</h2>
+<button onclick="location.href='/api/views/registro'">Ir a registro</button>
